# archive-vision

./: CMakeLists.txt  helper.cpp  helper.h  imageDocument.cpp  imageDocument.h  imgextract.cpp  imgextract.h  makeContourImages.cpp  makeContourImages.h  makeDictionary.cpp  makeWordHistograms.cpp  visualWordGenerator.cpp
